# mls

./: .rustfmt.toml  Cargo.toml  Makefile
src/: args.rs  color.rs  datetime.rs  display.rs  file.rs  fileinfo.rs  info.rs  main.rs  termsize.rs  unsafelibc.rs
src/display/: grid.rs  list.rs  tree.rs
src/ext/: datetime.rs  flarg.rs  mod.rs  unlibc.rs  xattr.rs
src/file/: attr.rs  link.rs  mode.rs  name.rs  size.rs  time.rs
