[package]
name = "mls"
version = "0.1.0"
authors = ["Joker <nice.way@live.com>"]
description = "ls"
repository = "https://github.com/Joker/mls"
keywords = ["ls", "terminal", "color"]
exclude = ["target", "Cargo.lock"]
edition = "2021"


[dependencies]
libc = "0.2.*"
exacl = { version = "0.11.0", optional = true }

[features]
default = ["xattr"]
xattr = ["dep:exacl"]

[profile.release]
strip = true
panic = "abort"
lto = true
